Cloudflare Workers ctxの動作確認

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240419.0",
+    "nitro-cloudflare-dev": "^0.1.4",
+    "wrangler": "^3.51.2"
   }
 }
